# dateranger

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/dateranger/: dateranger.py  datestr.py  regexpatterns.py
tests/: test_dates.py
