# -----------
# SPDX-License-Identifier: MIT
# Copyright (c) 2022 Troy Williams

# uuid  : c92ae0d8-c305-11ec-bded-395f48fdf95d
# author: Troy Williams
# email : troy.williams@bluebill.net
# date  : 2022-04-23
# -----------

[metadata]
name = dateranger
version = 0.0.1
author = Troy Williams
author_email = troy.williams@bluebill.net
license = MIT
description = Format strings representing date ranges to dates
# url =
# long_description = file: README.md
# long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src

install_requires =
    tzdata

include_package_data = True
python_requires = >=3.9

# https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
[options.packages.find]
where = src
